# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

pygame-16
October 23, 2003
    final updates for 1.6

October 15, 2003
    Rects now stored with ints (not shorts)

October 2, 2003
    Add ARGB support to fromstring and tostring

September 29, 2003
    Replaced Objective C with PyObjC code for MacOS X
    Fixed 1 pixel horizontal/vertical line draw

September 27, 2003
	Fix reading from file file-like objects (thx Timothy Stranex)

September 21, 2003
	Fix sysfont registry bug on winNT arch

September 18, 2003
	Fix color problem when saving opengl screenshot

September 10, 2003
	SysFont now accepts None like regular Font

August 10, 2003
	fix JOYHAT_RIGHT input (thanks Latimerius)
	system font names have punctuation removed

July 26, 2003
	add GL_STEREO

July 22, 2003
	add GL_MULTISAMPLEBUFFERS and GL_MULTISAMPLESAMPLES

June 11, 2003
	Surface.set_at() respects clip area
	cleaned fill circle draw

June 8, 2003
	add system font; SysFont,get_system_fonts,match_system_font

June 7, 2003
	Font() no longer segfaults on bad filename [BUG]
	add color module for simple color manipulations

June 6, 2003
	set_palette_at() index 0 fix
	draw.arc() (thanks Lalo Martins)
	Rects are pickleable

May 12, 2003
	Brett Calcott's quick fix for 'trunc' on visualc

May 10, 2003
	fix Derek Simkowiak's find of problem alphas

March 10, 2003
	add OPENGL support to image.tostring()

March 9, 2003
	Bug in Clock.tick() was delaying double
	load Font objects from any python file-like object

February 26, 2003
	Sprite and Group now new-style classes

Februrary 12, 2003
	fix immediate returns for first time.delay and time.wait

February 11, 2003
	more OSX SDLmain.m patches from Andrew Straw

February 5, 2003
	antialiased lines, from Jorge Gonzalez
	allow Font.render() with empty string

February 2, 2003
	refcount bug in Font.size [BUG]

December 5, 2002