@@ -6,7 +6,7 @@ Pygame Readme Information
 <font size=+5><b>Pygame Readme</b></font>
 </td></tr><tr><td align=left width=33%><big>
 
-Version 1.6<br>October 23, 2003
+Version 1.6.1<br>Devel Release
 
 
 </td><td align=center width=34%><big>
